--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_sign_in: ^5.4.0
+  firebase_auth: ^3.6.2
+  animated_splash_screen: ^1.3.0
+  get: ^4.6.5
+  webview_flutter: ^3.0.4
+  flutter_native_splash: ^2.2.7
+  logger: ^1.1.0
+  http: ^0.13.5
+  cloud_firestore: ^3.4.3
+  firebase_storage: ^10.3.4
+  firebase_core: ^1.20.0
+  extended_image: ^6.2.1
+
 
 dev_dependencies:
   flutter_test:
